--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -15,7 +15,7 @@
   <body>
     {% include header.html %}
     <section class="description">
-      <div>{{ page.description }}</div>
+      <div class="description-text">{{ page.description }}</div>
     </section>
     <section class="main-content">
 
