--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header>
+<div class="project-list col-2">
   <a href="{{ site.github.url }}"> <h1>{{ site.title | default: site.github.repository_name }}</h1> </a>
   <p>{{ site.description | default: site.github.project_tagline }}</p>
   <ul>
@@ -23,4 +23,4 @@
       <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
     </ul>
   {% endif %}
-</header>
+</div>
