--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,38 +6,31 @@
 
 {% seo %}
 
+    <link rel="stylesheet" href="{{ '/assets/css/bootstrap.css' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
     <meta name="viewport" content="width=device-width">
+    <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
+    <script src="{{ '/assets/js/bootstrap.js' | relative_url }}"></script>
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
-  <body>
-    <div class="wrapper">
+  <body class="content">
       {% include header.html %}
-      <section>
+      <div class="col-md-auto">
         {{ site.data.projects }}
-      </section>
-      <!--<footer>-->
-        <!--{% if site.github.is_project_page %}-->
-        <!--&lt;!&ndash;<p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>&ndash;&gt;-->
-        <!--{% endif %}-->
-        <!--&lt;!&ndash;<p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>&ndash;&gt;-->
-      <!--</footer>-->
-    </div>
-    <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
+      </div>
 
+  {% if site.google_analytics %}
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  <!--{% if site.google_analytics %}-->
-    <!--<script>-->
-        <!--(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){-->
-        <!--(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),-->
-        <!--m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)-->
-        <!--})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');-->
-
-        <!--ga('create', '{{ site.google_analytics }}', 'auto');-->
-        <!--ga('send', 'pageview');-->
-    <!--</script>-->
-  <!--{% endif %}-->
+      ga('create', '{{ site.google_analytics }}', 'auto');
+      ga('send', 'pageview');
+    </script>
+  {% endif %}
   </body>
 </html>
