--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,41 +1,46 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-{% seo %}
+  {% seo %}
 
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-3 project-list">
-        {% include header.html %}
+  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+  <!--[if lt IE 9]>
+  <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+</head>
+<body>
+<div class="container-fluid">
+  {% include header.html %}
+  <div class="row">
+    <div class="col-sm-3 project-list">
+      {% include nav.html %}
+    </div>
+
+    <div class="col-sm-9 col-lg-6 main-content">
+      <div class="description-text">
+        {{ page.description }}
       </div>
-
-      <div class="col-sm-9 main-content">
-                <div class="description-text">
-          {{ page.description }}
-        </div>
 
       {% for image in page.images %}
-        <img src="/assets/img/{{image}}">
+      <img src="/assets/img/{{image}}">
       {% endfor %}
-        {% if page.slug == 'stacker' %}
-          <iframe src="//view.stacker.cc/newsbound/fog_demo/index.html?embed=true" name="nb-stack" class="newsbound-embedded" allowfullscreen="" width="675" height="380" frameborder="0"></iframe>
-        {% endif %}
-        </div>
-      </div>
-      </div>
-  </body>
+      {% if page.slug == 'stacker' %}
+      <iframe src="//view.stacker.cc/newsbound/fog_demo/index.html?embed=true" name="nb-stack"
+              class="newsbound-embedded" allowfullscreen="" width="675" height="380" frameborder="0"></iframe>
+      {% endif %}
+    </div>
+  </div>
+
+</div>
+</div>
+</body>
 </html>
