--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -6,10 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+			  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+			  crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   {% seo %}
 
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
@@ -18,29 +20,28 @@
   <![endif]-->
 </head>
 <body>
-<div class="container-fluid">
-  {% include header.html %}
-  <div class="row">
-    <div class="col-sm-3 project-list">
-      {% include nav.html %}
-    </div>
-
-    <div class="col-sm-9 col-lg-6 main-content">
-      <div class="description-text">
-        {{ page.description }}
+  <div class="container-fluid">
+    {% include header.html %}
+    <div class="row">
+      <div class="col-sm-3 project-list">
+        {% include nav.html %}
       </div>
 
-      {% for image in page.images %}
-      <img src="/assets/img/{{image}}">
-      {% endfor %}
-      {% if page.slug == 'stacker' %}
-      <iframe src="//view.stacker.cc/newsbound/fog_demo/index.html?embed=true" name="nb-stack"
-              class="newsbound-embedded" allowfullscreen="" width="675" height="380" frameborder="0"></iframe>
-      {% endif %}
+      <div class="col-sm-9 col-lg-6 main-content">
+        <div class="description-text">
+          {{ page.description }}
+        </div>
+
+        {% for image in page.images %}
+        <img src="/assets/img/{{image}}">
+        {% endfor %}
+        {% if page.slug == 'stacker' %}
+        <iframe src="//view.stacker.cc/newsbound/fog_demo/index.html?embed=true" name="nb-stack"
+                class="newsbound-embedded" allowfullscreen="" width="675" height="380" frameborder="0"></iframe>
+        {% endif %}
+      </div>
     </div>
   </div>
-
-</div>
 </div>
 </body>
 </html>
