--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -8,7 +8,8 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+  <script
+			  src="https://code.jquery.com/jquery-3.3.1.min.js"
 			  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 			  crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -24,6 +25,17 @@
     {% include header.html %}
     <div class="row">
       <div class="col-sm-3 project-list">
+        <ul class="tags-key">
+          <li class="">
+            <span class="pixel design"></span>= design
+          </li>
+          <li class="">
+            <span class="pixel code"></span>= code
+          </li>
+          <li class="">
+            <span class="pixel advertising"></span>= advertising
+          </li>
+        </ul>
         {% include nav.html %}
       </div>
 
