--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -26,15 +26,17 @@
     <div class="row">
       <div class="col-sm-3 project-list">
         <ul class="tags-key">
+          ---
           <li class="">
-            <span class="pixel design"></span>= design
+             design: <span class="pixel design"></span>
           </li>
           <li class="">
-            <span class="pixel code"></span>= code
+             code: <span class="pixel code"></span>
           </li>
           <li class="">
-            <span class="pixel advertising"></span>= advertising
+             advertising: <span class="pixel advertising"></span>
           </li>
+        ---
         </ul>
         {% include nav.html %}
       </div>
