--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -171,7 +171,7 @@ li.list-item.page > a {
     width: 5px;
   }
 }
-.tags-key {
+ul.tags-key {
   li {
     margin-bottom: 0;
     color: $color-gray !important;
