--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,19 @@
   {% include header.html %}
   <div class="row">
     <div class="col-sm-3 project-list">
+      <ul class="tags-key">
+        ---
+        <li class="">
+          design: <span class="pixel design"></span>
+        </li>
+        <li class="">
+          code: <span class="pixel code"></span>
+        </li>
+        <li class="">
+          advertising: <span class="pixel advertising"></span>
+        </li>
+        ---
+      </ul>
       {% include nav.html %}
     </div>
 
