update - use include for key

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -23,6 +23,7 @@
   {% include header.html %}
   <div class="row">
     <div class="col-sm-3 project-list">
+      {% include key.html %}
       {% include nav.html %}
     </div>
 
