add - a little more info

--- a/_includes/key.html
+++ b/_includes/key.html
@@ -1,13 +1,16 @@
 <ul class="tags-key">
   ---
-  <li class="">
+  <li class="tags-key">
     design: <span class="pixel design"></span>
   </li>
-  <li class="">
+  <li class="tags-key">
     code: <span class="pixel code"></span>
   </li>
-  <li class="">
-    advertising: <span class="pixel advertising"></span>
+  <li class="tags-key">
+    hardware: <span class="pixel hardware"></span>
+  </li>
+  <li class="tags-key">
+    other: <span class="pixel other"></span>
   </li>
   ---
 </ul>
