--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!--<div class="row">
   <div class="col-sm-3 project-list">
   <a href="{{ site.github.url }}">
     <h1>{{ site.title | default: site.github.repository_name }}</h1>
@@ -6,4 +6,4 @@
   <p class="site-description">
     {{ site.description | default: site.github.project_tagline }}</p>
   </div>
-</div>
+</div>-->
