--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,9 @@
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
+  <meta name="description" content="A stream of projects & thoughts" />
+  <meta name="keywords" content="design, code, libraries" />
+  <title>Anastasia Aizman's portfolio</title>
 </head>
 <body>
 <div class="container-fluid">
