--- a/_includes/key.html
+++ b/_includes/key.html
@@ -1,16 +1,16 @@
 <ul class="tags-key">
-  ---
+  --- key
   <li class="tags-key">
-    design: <span class="pixel design"></span>
+    <span class="pixel design"></span> design
   </li>
   <li class="tags-key">
-    code: <span class="pixel code"></span>
+    <span class="pixel code"></span> code
   </li>
   <li class="tags-key">
-    hardware: <span class="pixel hardware"></span>
+    <span class="pixel hardware"></span> hardware
   </li>
   <li class="tags-key">
-    other: <span class="pixel other"></span>
+    <span class="pixel other"></span> other
   </li>
   ---
 </ul>
