--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   <meta name="description" content="A stream of projects & thoughts" />
-  <meta name="keywords" content="design, code, libraries" />
+  <meta name="keywords" content="design, code, libraries, library, experiments, anastasia aizman" />
   <title>Anastasia Aizman's portfolio</title>
 </head>
 <body>
@@ -32,9 +32,6 @@
       {% include nav.html %}
     </div>
 
-    <div class="col-md-auto">
-      {{ site.data.projects }}
-    </div>
   </div>
 </div>
 </body>
