update - fixing links, updating styles

--- a/_includes/key.html
+++ b/_includes/key.html
@@ -1,5 +1,5 @@
 <ul class="tags-key">
-  --- key
+  key
   <li class="tags-key">
     <span class="pixel design"></span> design
   </li>
@@ -7,10 +7,7 @@
     <span class="pixel code"></span> code
   </li>
   <li class="tags-key">
-    <span class="pixel hardware"></span> hardware
-  </li>
-  <li class="tags-key">
-    <span class="pixel other"></span> other
+    <span class="pixel other"></span> other (i.e. ads, hardware)
   </li>
   ---
 </ul>
