--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,16 @@
-<!--<div class="row">
-  <div class="col-sm-3 project-list">
-  <a href="{{ site.github.url }}">
-    <h1>{{ site.title | default: site.github.repository_name }}</h1>
-  </a>
+<div class="header"><a href="{{ site.github.url }}">
+  <h1>{{ site.title | default: site.github.repository_name }}</h1>
+</a>
   <p class="site-description">
-    {{ site.description | default: site.github.project_tagline }}</p>
-  </div>
-</div>-->
+    {{ site.description | default: site.github.project_tagline }}
+  </p>
+  <ul>
+    {% for page in site.pages %}
+    {% if page.permalink %}
+    <li class="list-item page">
+      [ <a href="{{ page.permalink }}"> {{ page.title }} </a> ]
+    </li>
+    {% endif %}
+    {% endfor %}
+  </ul>
+</div>
