--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,15 +20,10 @@
 
 <body>
 <div class="container-fluid">
-  {% include header.html %}
   <div class="row">
-    <div class="col-sm-3 project-list">
-      <a href="{{ site.github.url }}">
-        <h1>{{ site.title | default: site.github.repository_name }}</h1>
-      </a>
-      <p class="site-description">
-        {{ site.description | default: sitea.github.project_tagline }}</p>
-      {% include key.html %}
+    <div class="col-xs-3 sidebar">
+      {% include header.html %}
+      <!--{% include key.html %}-->
       {% include nav.html %}
     </div>
 
