--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
   <![endif]-->
   <meta name="description" content="A stream of projects & thoughts" />
   <meta name="keywords" content="design, code, libraries, library, experiments, anastasia aizman" />
-  <title>Anastasia Aizman's portfolio</title>
+  <title>A stream of projects and thoughts</title>
 </head>
 <body>
 <div class="container-fluid">
@@ -26,7 +26,11 @@
       <!--{% include key.html %}-->
       {% include nav.html %}
     </div>
+  <main class="col-sm-9 col-lg-7 main-content">
+    {{ content }}
+  </main>
   </div>
+
 </div>
 </body>
 </html>
