--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -129,22 +129,27 @@ li > img, li > a > img {
   background: transparent;
   display: grid;
   border: 0;
+
   > li {
     display: block;
     color: $color-black;
+
     a {
       text-align: left;
       padding: 0;
       color: $color-black;
+
       &:hover, &:active, &:focus {
         border-bottom: 1px solid $color-blue;
       }
     }
+
     a:hover {
       font-style: normal;
       color: $color-blue;
       text-decoration: none;
     }
+
     a:focus {
       font-weight: normal;
       background-color: $color-yellow;
@@ -164,6 +169,7 @@ li > img, li > a > img {
   @media (min-width: $md-min) and (max-width: $md-max) {
     margin-left: 220px;
   }
+
   .image-description {
     font-size: 1.2em;
   }
@@ -207,12 +213,15 @@ li.list-item.page > a {
   &:hover, &:active, &:focus {
     border-bottom: 0;
   }
+
   .carousel-control-next-icon, .carousel-control-prev-icon {
   }
+
   .carousel-control-prev-icon {
     background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'><path d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/></svg>");
     margin-left: -150px;
   }
+
   .carousel-control-next-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e");
     margin-right: -160px;
@@ -235,18 +244,31 @@ ul.tags-key {
   }
 }
 
+ul.liltalks {
+  li {
+    line-height: 1.2em;
+    font-size: 0.9em;
+  }
+  li:before {
+    content: "- ";
+  }
+}
+
 .pixel {
   width: 7px;
   height: 7px;
   display: inline-block;
   border-radius: 50%;
   margin-right: 3px;
+
   &.blue, &.design {
     background-color: $color-blue;
   }
+
   &.red, &.code {
     background-color: orangered;
   }
+
   &.green, &.other {
     background-color: forestgreen;
   }
