--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,35 +1,39 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- Bootstrap JS -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script
+            src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
+    <script src="{{ '/assets/js/bootstrap.js' }}"></script>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-  <!--[if lt IE 9]>
-  <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-  <meta name="description" content="A stream of projects & thoughts" />
-  <meta name="keywords" content="design, code, libraries, library, experiments, anastasia aizman" />
-  <title>A stream of projects and thoughts</title>
+    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="description" content="A stream of projects & thoughts"/>
+    <meta name="keywords" content="design, code, libraries, library, experiments, anastasia aizman"/>
+    <title>A stream of projects and thoughts</title>
 </head>
 <body>
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-xs-3 sidebar">
-      {% include header.html %}
-      <!--{% include key.html %}-->
-      {% include nav.html %}
+    <div class="row">
+        <div class="col-xs-3 sidebar">
+            {% include header.html %}
+            <!--{% include key.html %}-->
+            {% include nav.html %}
+        </div>
+        <main class="col-sm-9 col-lg-7 main-content">
+            {{ content }}
+        </main>
     </div>
-  <main class="col-sm-9 col-lg-7 main-content">
-    {{ content }}
-  </main>
-  </div>
 
 </div>
 </body>
